Text, images and firefox bug Relaced some placeholders, and fixed a firefox bug.  - replaced text to main page  - replaced one placeholder image  - added insigno to sponsors  - removed microsoft from sponsors  - fixed a firefox bug that hides header behind dot thingy

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,6 @@
-.header {
 
+.header {
+  z-index:1;
   height: 80px;
   background-color: #017FD3;
   color: white;
