--- a/src/app/main/facebook-page/facebook-page.component.scss
+++ b/src/app/main/facebook-page/facebook-page.component.scss
@@ -37,13 +37,13 @@
 
 .face-row-left {
   width: calc(100% - 150px);
-  margin-top: 250px;
+  margin-top: 150px;
   margin-left: 150px;
 }
 
 .face-row-right {
   width: calc(100% - 150px);
-  margin-top: 250px;
+  margin-top: 150px;
   margin-right: 150px;
 }
 
