--- a/src/app/main/sponsor-page/sponsor-page.component.scss
+++ b/src/app/main/sponsor-page/sponsor-page.component.scss
@@ -6,8 +6,8 @@
 
 .sponsor-header {
   margin-top: 10px;
-  padding: 0 20px 0 20px;
-  border: solid 2px black;
+  padding: 30%;
+  border-bottom: solid 2px black;
   h1 {
     margin: 5px;
   }
